# multi-agent-with-agui

client/app/: globals.css  layout.tsx  page.tsx
client/app/api/agent/: route.ts
client/components/: ChatMessage.tsx  CollapsibleTrace.tsx  ToolGraph.tsx
client/lib/: types.ts  useAgentStream.ts
server/: .gitignore  pyproject.toml  requirements.txt
server/app/: agent.py  main.py  schemas.py  sse.py
server/src/: agent.py  executor.py  main.py  memory.py  state.py  tools.py  workflow.py
